src/index.css
:root {
	--beige: #FAEBD7;
	--grey: #696969;
}

body {
	margin: 0;
	background-color: var(--beige);
	/* background-color: white; */
	font-family: "Jost", sans-serif;
	/* -webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale; */
	transition-duration: 800ms;
	transition-property: background;
	/* will-change: background-color; */
	/* overflow: hidden; */
}

#root {
	background-color: inherit;
}

code {
	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
	monospace;
}

a {
	font-style: italic;
	color: inherit;
	text-decoration: underline;
}

@media screen and (min-width: 1920px) {
	:root {
		font-size: 20px;
	}
}

@media screen and (min-width: 2560px) {
	:root {
		font-size: 24px;
	}
}

@media screen and (min-width: 3072px) {
	:root {
		font-size: 28px;
	}
}

@media screen and (min-width: 3840px) {
	:root {
		font-size: 32px;
	}
}

@media screen and (min-width: 3840px) {
	:root {
		font-size: 36px;
	}
}

@media screen and (min-width: 4480px) {
	:root {
		font-size: 40px;
	}
}

@media screen and (min-width: 5120px) {
	:root {
		font-size: 44px;
	}
}

@media screen and (min-width: 6016px) {
	:root {
		font-size: 48px;
	}
}

@media screen and (min-width: 7680px) {
	:root {
		font-size: 52px;
	}
}

